# cepa-backend

./: .gitignore  ANNOUNCEMENTS_API_DOCUMENTATION.md  API_DOCUMENTATION.md  CAREER_API_DOCUMENTATION.md  CONTACT_API_DOCUMENTATION.md  EMAIL_SETUP_GUIDE.md  MULTIMEDIA_API_DOCUMENTATION.md  Procfile  QUILL_EDITOR_SETUP.md  README.md  pyproject.toml  railway-deployment.md  requirements.txt  test_focus_areas.py
.cursor/rules/: general.mdc
.plan/: general.md
about/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
about/migrations/: 0001_initial.py  0002_populate_about_page_data.py  0003_teammember.py  0004_populate_team_members.py  0005_partner.py  0006_populate_partners.py
chatbot/: admin.py  models.py  serializers.py  urls.py  views.py
chatbot/migrations/: 0001_initial.py
contact/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_auto_20250922_0638.py  0003_auto_20250922_0706.py  (+7 more)
fellowships/: admin.py  models.py  serializers.py  urls.py  views.py
focusareas/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
getinvolved/: admin.py  models.py  serializers.py  urls.py  views.py
home/: admin.py  models.py  serializers.py  urls.py  views.py
main/: settings.py  urls.py  utils.py  views.py
multimedia/: admin.py  models.py  serializers.py  urls.py  views.py
resources/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  widgets.py
settings/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
templates/: 404.html  landing_page.html
(+48 files in other folders)
